--- a/client/styles/responsive.scss
+++ b/client/styles/responsive.scss
@@ -142,4 +142,9 @@ $screen-md-max:              ($screen-lg-min - 1);
     padding-left: 10px;
     padding-right: 10px;
   }
+
+  .formcontainer {
+    width: 90%;
+    left: 5%;
+  }
 }
