--- a/client/views/list/list.scss
+++ b/client/views/list/list.scss
@@ -13,6 +13,7 @@
 }
 
 #questiondiv {
+  padding: 0 20px;
 	display: block;
 	margin: 0px auto;
 	height: auto;
@@ -20,7 +21,7 @@
 }
 
 #questioninput {
-	width: 90%;
+	width: 100%;
 	height: 110px;
 	font-size: 15px;
 	border-width: 0;
