--- a/client/views/main/main.scss
+++ b/client/views/main/main.scss
@@ -14,7 +14,7 @@
 }
 
 #instancenameinput {
-	width: 90%;
+	width: 100%;
 	padding: 0 25px;
 	margin: 0 auto;
 	border-radius: 5px 5px 0px 0px;
@@ -28,7 +28,7 @@
 }
 
 #instancedescriptioninput {
-	width: 90%;
+	width: 100%;
 	padding: 0 25px;
 	margin: 0 auto;
 	border-width: 0;
@@ -106,7 +106,6 @@ input {
 #instancebottominputcontainer {
 	height: 360px;
 	display: none;
-	width: 90%;
 	background-color: #f9f9f9;
 	padding: 30px 25px 20px 25px;
 	margin: 0 auto;
